задал класс для изображения в блоке our-progress и внеш. отступ снизу

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </div>
         <div class="our-progress">
-          <img src="img/description-company/nerds-illustration.png" width="360" height="208" alt="Логотип студии Нёрдс">
+          <img class="picture-nerds" src="img/description-company/nerds-illustration.png" width="360" height="208" alt="Логотип студии Нёрдс">
           <p class="progress-slogan">C 2004 года Любим точность во всем:</p>
           <table class="progress-table">
             <tr class="procent">
