--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li class="menu-contacts"><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="order">
-          <li><a class="order-link" href="order-project.html"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15"><circle fill="#a6a6a6" cx="4.5" cy="13.5" r="1.5"/><circle fill="#a6a6a6" cx="12.5" cy="13.5" r="1.5"/><path fill="#a6a6a6" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/></svg>Корзина</a></li>
+          <li><a class="order-link" href="order-project.html">Корзина</a></li>
           <!-- <img src="img\icons\icon-cart.svg"> убрал временно от корзины -->
         </ul>
       </nav>
@@ -107,10 +107,10 @@
       <section class="partners">
         <h2 class="visually-hidden">Наши партнеры</h2>
         <ul class="partners-list">
-          <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html.png" alt="HTML Academy"></a></li>
-          <li><a href="#"><img src="img/partners/logo-barber.png" alt="Barbershop Borodiski"></a></li>
-          <li><a href="#"><img src="img/partners/logo-pink.png" alt="Pink"></a></li>
-          <li><a href="#"><img src="img/partners/logo-mishka.png" alt="Mishka"></a></li>
+          <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html_copy.png" alt="HTML Academy"></a></li>
+          <li><a href="#"><img src="img/partners/logo-barber_copy.png" alt="Barbershop Borodiski"></a></li>
+          <li><a href="#"><img src="img/partners/logo-pinc_copy.png" alt="Pink"></a></li>
+          <li><a href="#"><img src="img/partners/logo-mishka_copy.png" alt="Mishka"></a></li>
         </ul>
       </section>
     </div>
