добавил красные черточки к элементам списка ability-list

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <h3 class="ability-title">Выполняем заказы на разработку:</h3>
             <ul class="ability-list">
               <!-- дисп блок -->
-              <li>Веб-сайтов любой сложности</li>
-              <li>Мобильных приложений для iOS и Android</li>
-              <li>Слайдшоу и видео для корпоративных презентаций</li>
+              <li><p class="red-line">Веб-сайтов любой сложности</p></li>
+              <li><p class="red-line">Мобильных приложений для iOS и Android</p></li>
+              <li><p class="red-line">Слайдшоу и видео для корпоративных презентаций</p></li>
             </ul>
           </div>
         </div>
