--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
     </section>
     <!-- Здесь форма обратной связи -->
-    <section class="popup">
+    <section class="popup-writeus container-center">
       <h2 class="popup-title">Напишите нам</h2>
       <form class="popup-form" action="https://echo.htmlacademy" method="post">
         <label class="name">Ваше имя:<input type="text" name="fullname" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
