--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
       </ul>
       <ul class="order">
         <li><a class="order-link" href="order-project.html">Корзина</a></li>
-        <!-- <img src="img\icons\icon-cart.svg"> удалил временно  -->
+        <!-- <img src="img\icons\icon-cart.svg"> удалил -->
       </ul>
     </nav>
   </header>
@@ -137,18 +137,20 @@
   </div>
   </main>
   <footer class="main-footer">
-    <section class="location container-center">
+    <section class="location">
       <h2 class="visually-hidden">Адрес и контакты</h2>
+<div class="contacts container-center">
       <div class="wrapper-contacts">
         <p class="contact-name">Nёrds design studio</p>
         <p class="contact-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <p class="contact-phone"><a href="tel:+78172757575">тел. +7 (817) 275-75-75</a></p>
         <a class="button button-connect" href="#">Напишите нам</a>
       </div>
+    </div>
     </section>
     </div>
     <!-- Здесь будет форма обратной связи -->
-    <section class="popup-writeus container-center">
+    <section class="popup">
       <h2 class="popup-title">Напишите нам</h2>
       <form class="popup-form" action="https://echo.htmlacademy" method="post">
         <label class="name">Ваше имя:<input type="text" name="fullname" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
