--- a/index.html
+++ b/index.html
@@ -137,18 +137,14 @@
     <section class="popup">
       <h2 class="popup-title">Напишите нам</h2>
       <form class="popup-form" action="https://echo.htmlacademy" method="post">
-        <p class="appointment-item">
           <label class="name">Ваше имя:<input type="text" name="fullname" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
-        </p>
-        <p class="appointment-item">
           <label class="mail">Ваш e-mail:<input type="text" name="e-mail" placeholder="email@example.com" aria-label="Поле для email"></label>
-        </p>
-        <p class="appointment-item">
           <label class="letter">Текст письма:<textarea name="letter" placeholder="В свободной форме" aria-label="Поле для обращения"></textarea></label>
-        </p>
         <button class="modal-button button" type="submit">Отправить</button>
       </form>
+<div class="wrapper-position">
       <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
+    </div>
     </section>
     <section class="social-connection container-center">
       <h2 class="visually-hidden">Студия в соцсетях</h2>
