--- a/catalog.html
+++ b/catalog.html
@@ -123,7 +123,7 @@
         </li>
         <li class="catalog-item">
           <img src="img/catalog-item/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App" width="360" height="576">
-          <div class="description-catalog-item">
+          <div class="description-catalog-item pinc-card">
             <h3 class="catalog-item-topic"><a href="#">Pink App</a></h3>
             <p>Продуктовый лендинг приложения для iOS и Android</p>
             <a class="button button-price" href="order-project.html">9900 руб.</a>
