стилизовал пагинатор и попробовал сделать подчеркивание для текущего состояния страницы

--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
       <ul class="site-navigation">
         <li class="menu-studia"><a href="info.html">Студия</a></li>
         <li class="menu-clients"><a href="our-clients.html">Клиенты</a></li>
-        <li class="menu-shop"><a href="catalog.html">Магазин</a></li>
+        <li class="menu-shop menu-navigation-current"><a href="catalog.html">Магазин</a></li>
         <li class="menu-contacts"><a href="contacts.html">Контакты</a></li>
       </ul>
       <ul class="order">
@@ -163,10 +163,10 @@
         </li>
       </ul>
       <ul class="pagination-list">
-        <li><a>1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">Следующая</a></li>
+        <li class="pagination-item pagination-item-current"><a>1</a></li>
+        <li class="pagination-item"><a href="#">2</a></li>
+        <li class="pagination-item"><a href="#">3</a></li>
+        <li class="pagination-item"><a href="#">Следующая</a></li>
       </ul>
     </section>
   </div>
