--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
   <main class="content">
     <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
     <section class="features">
+      <div class="container-center">
+        <div class="sliders-controls">
+          <i class="active"></i>
+          <i></i>
+          <i></i>
+
+        </div>
       <div class="features-slide features-slide-1">
-        <p class="slide-slogan"><b>Долго, дорого, скрупулезно.</b></p>
-        <p class="slide-caption">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+        <p class="slide-slogan"><b>Долго, дорого,<br> скрупулезно.</b></p>
+        <p class="slide-caption">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения</p>
         <a class="button button-info" href="#">Узнать больше</a>
       </div>
       <div class="features-slide features-slide-2">
@@ -41,10 +48,11 @@
         <a class="button button-info" href="#">Узнать больше</a>
       </div>
       <div class="features-slide features-slide-3">
-        <p class="slide-slogan"><b>Только ночь, только хардкор</b></p>
-        <p class="slide-caption">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
+        <p class="slide-slogan"><b>Только ночь,<br> только хардкор</b></p>
+        <p class="slide-caption">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается</p>
         <a class="button button-info" href="#">Узнать больше</a>
       </div>
+    </div>
     </section>
     <div class="container-center">
       <section class="services">
