--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             <ul class="ability-list">
               <!-- дисп блок -->
               <li>
-                <p class="red-line">Веб-сайтов любой сложности</p>
+                <p>Веб-сайтов любой сложности</p>
               </li>
               <li>
-                <p class="red-line">Мобильных приложений для iOS и Android</p>
+                <p>Мобильных приложений для iOS и Android</p>
               </li>
               <li>
-                <p class="red-line">Слайдшоу и видео для корпоративных презентаций</p>
+                <p>Слайдшоу и видео для корпоративных презентаций</p>
               </li>
             </ul>
           </div>
