добавил отсупы таблице progress-table

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <p class="progress-slogan">C 2004 года Любим точность во всем:</p>
           <table class="progress-table">
             <tr class="procent">
-              <td>146%</td>
+              <td style="">146%</td>
               <td>100%</td>
               <td>50%</td>
             </tr>
