--- a/catalog.html
+++ b/catalog.html
@@ -73,18 +73,18 @@
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="feature-block" id="feature">
-              <label for="feature"">Блок преимуществ</label>
+              <label for="feature">Блок преимуществ</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" checked id="fresh-info">
-              <label for="fresh-info"">Новости</label>
+              <label for="fresh-info">Новости</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="galary" id="picture">
               <label for="picture">Галерея</label>
             </li>
             <li class="filter-option">
-              <input class="filter-input filter-input-checkbox" type="checkbox" name="kart" id="basket">
+              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="kart" id="basket">
               <label for="basket">Корзина</label>
             </li>
           </ul>
