удалил старые комментарии и добавил новые

--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,6 @@
       </ul>
       <ul class="order">
         <li><a class="order-link" href="order-project.html">Корзина</a></li>
-        <!-- <img src="img\icons\icon-cart.svg"> удалил -->
       </ul>
     </nav>
   </header>
@@ -185,7 +184,7 @@
     </div>
     </section>
     </div>
-    <!-- Здесь будет форма обратной связи -->
+    <!-- Здесь начинается форма обратной связи -->
     <section class="popup">
       <h2 class="popup-title">Напишите нам</h2>
       <form class="popup-form" action="https://echo.htmlacademy" method="post">
