Переделал стили у фильтра (кроме фокуса и disabled)

--- a/catalog.html
+++ b/catalog.html
@@ -37,29 +37,18 @@
       <form class="filter" method="get" action="https://echo.htmlacademy">
         <fieldset>
            <legend class="filter-title">Сетка:</legend>
-          <!--<ul>
-            <li class="filter-option">
-              <label class="filter-cover filter-cover-radio"><input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="adaptive" checked>Адаптивная</label>
-            </li>
-            <li class="filter-option">
-              <label class="filter-cover filter-cover-radio"><input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="static">Фиксированная</label>
-            </li>
-            <li class="filter-option">
-              <label class="filter-cover filter-cover-radio"><input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="straching">Резиновая</label>
-            </li>
-          </ul> -->
-          <ul>
+              <ul>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="adaptive" id="variable" checked>
-              <label for="variable">Адаптивная</label>
+              <label class="label-radio label-radio-checked" for="variable">Адаптивная</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="static" id="fixed">
-              <label for="fixed">Фиксированная</label>
+              <label class="label-radio" for="fixed">Фиксированная</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="straching" id="ruber">
-              <label for="ruber">Резиновая</label>
+              <label class="label-radio" for="ruber">Резиновая</label>
             </li>
           </ul>
         </fieldset>
@@ -68,23 +57,23 @@
           <ul>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" checked id="slide">
-              <label for="slide">Слайдер</label>
+              <label class="checkbox-label checkbox-label-checked" for="slide">Слайдер</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="feature-block" id="feature">
-              <label for="feature">Блок преимуществ</label>
+              <label class="checkbox-label" for="feature">Блок преимуществ</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" checked id="fresh-info">
-              <label for="fresh-info">Новости</label>
+              <label class="checkbox-label checkbox-label-checked" for="fresh-info">Новости</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="galary" id="picture">
-              <label for="picture">Галерея</label>
+              <label class="checkbox-label" for="picture">Галерея</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="kart" id="basket">
-              <label for="basket">Корзина</label>
+              <label class="checkbox-label" for="basket">Корзина</label>
             </li>
           </ul>
           <!-- <ul>
