--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 
         </div>
         <div class="features-slide features-slide-1">
-          <p class="slide-slogan"><b>Долго, дорого,<br> скрупулезно.</b></p>
+          <p class="slide-slogan">Долго, дорого,<br> скрупулезно.</p>
           <p class="slide-caption">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения</p>
           <a class="button button-info" href="#">Узнать больше</a>
         </div>
         <div class="features-slide features-slide-2">
-          <p class="slide-slogan"><b>Любим математику как никто другой</b></p>
+          <p class="slide-slogan">Любим математику как никто другой</p>
           <p class="slide-caption">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
           <a class="button button-info" href="#">Узнать больше</a>
         </div>
         <div class="features-slide features-slide-3">
-          <p class="slide-slogan"><b>Только ночь,<br> только хардкор</b></p>
+          <p class="slide-slogan">Только ночь,<br> только хардкор</p>
           <p class="slide-caption">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается</p>
           <a class="button button-info" href="#">Узнать больше</a>
         </div>
