поправил навигацию для слайдов

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <section class="features">
       <div class="container-center">
         <div class="sliders-controls">
-          <i class="active"></i>
-          <i></i>
-          <i></i>
+          <a class="active" href="#"></a>
+          <a href="#"></a>
+          <a href="#"></a>
 
         </div>
         <div class="features-slide features-slide-1">
