--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
           <div class="ability-company">
             <h3 class="ability-title">Выполняем заказы на разработку:</h3>
             <ul class="ability-list">
-              <!-- дисп блок -->
               <li>
                 <p>Веб-сайтов любой сложности</p>
               </li>
@@ -104,9 +103,9 @@
           <p class="progress-slogan">C 2004 года Любим точность во всем:</p>
           <table class="progress-table">
             <tr class="procent">
-              <td style="">146%</td>
-              <td>100%</td>
-              <td>50%</td>
+              <td>146<span class="pocent-smb">%</span></td>
+              <td>100<span class="pocent-smb">%</span></td>
+              <td>50<span class="pocent-smb">%</span></td>
             </tr>
             <tr class="value">
               <td>Уровень самоотдачи</td>
