--- a/catalog.html
+++ b/catalog.html
@@ -95,7 +95,7 @@
             </li>
           </ul> -->
         </fieldset>
-        <button class="filter-button button" type="submit">Показать</button>
+        <button class="button filter-button" type="submit">Показать</button>
       </form>
       <!-- Здесь будет форма -->
     </section>
