удалил лишние классы в меню навигации каталога товаров

--- a/catalog.html
+++ b/catalog.html
@@ -15,10 +15,10 @@
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html"><img src="img/header/nerds-logo.svg" width="160" height="65" alt="Логотип студии Нёрдс"></a>
       <ul class="site-navigation menu-current">
-        <li class="menu-studia"><a href="info.html">Студия</a></li>
-        <li class="menu-clients"><a href="our-clients.html">Клиенты</a></li>
-        <li class="menu-shop"><a class="menu-item-current" href="catalog.html">Магазин</a></li>
-        <li class="menu-contacts"><a href="contacts.html">Контакты</a></li>
+        <li><a href="info.html">Студия</a></li>
+        <li><a href="our-clients.html">Клиенты</a></li>
+        <li><a class="menu-item-current" href="catalog.html">Магазин</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
       </ul>
       <ul class="order menu-current">
         <li><a class="order-link" href="order-project.html">Корзина</a></li>
