--- a/catalog.html
+++ b/catalog.html
@@ -47,7 +47,7 @@
               <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="static" id="fixed">
               <label class="label-radio" for="fixed">Фиксированная</label>
             </li>
-            <li class="filter-option">
+            <li class="filter-option filter-option-rubber">
               <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="straching" id="ruber">
               <label class="label-radio" for="ruber">Резиновая</label>
             </li>
@@ -72,7 +72,7 @@
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="galary" id="picture">
               <label class="checkbox-label" for="picture">Галерея</label>
             </li>
-            <li class="filter-option">
+            <li class="filter-option filter-option-basket">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="kart" id="basket">
               <label class="checkbox-label" for="basket">Корзина</label>
             </li>
