доделал состояния при наведении в фильтре

--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
            <legend class="filter-title">Сетка:</legend>
               <ul>
             <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="adaptive" id="variable" checked>
+              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="adaptive" id="variable" checked disabled>
               <label class="label-radio label-radio-checked" for="variable">Адаптивная</label>
             </li>
             <li class="filter-option">
@@ -58,42 +58,25 @@
           <ul>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" checked id="slide">
-              <label class="checkbox-label checkbox-label-checked" for="slide">Слайдер</label>
+              <label class="label-checkbox" for="slide">Слайдер</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="feature-block" id="feature">
-              <label class="checkbox-label" for="feature">Блок преимуществ</label>
+              <label class="label-checkbox" for="feature">Блок преимуществ</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" checked id="fresh-info">
-              <label class="checkbox-label checkbox-label-checked" for="fresh-info">Новости</label>
+              <label class="label-checkbox" for="fresh-info">Новости</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="galary" id="picture">
-              <label class="checkbox-label" for="picture">Галерея</label>
+              <label class="label-checkbox" for="picture">Галерея</label>
             </li>
             <li class="filter-option filter-option-basket">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="kart" id="basket">
-              <label class="checkbox-label" for="basket">Корзина</label>
+              <label class="label-checkbox" for="basket">Корзина</label>
             </li>
           </ul>
-          <!-- <ul>
-            <li class="filter-option">
-              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" checked>Слайдер</label>
-            </li>
-            <li class="filter-option">
-              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="feature-block">Блок преимуществ</label>
-            </li>
-            <li class="filter-option">
-              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" checked>Новости</label>
-            </li>
-            <li class="filter-option">
-              <label class="filter-cover"><input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="galary">Галерея</label>
-            </li>
-            <li class="filter-option">
-              <label class="filter-cover"><input class="filter-input filter-input-checkbox" type="checkbox" name="kart">Корзина</label>
-            </li>
-          </ul> -->
         </fieldset>
         <button class="button filter-button" type="submit">Показать</button>
       </form>
