изменил скрытый заголовок в блоке товаров, добавил разные состояния заголовкам в карточках

--- a/catalog.html
+++ b/catalog.html
@@ -83,7 +83,7 @@
       <!-- Здесь будет форма -->
     </section>
     <section class="catalog">
-      <h2 class="visually-hidden">Список шаблонов</h2>
+      <h2 class="visually-hidden">Образцы проектов</h2>
       <ul class="catalog-list">
         <li class="catalog-item">
           <img src="img/catalog-item/img-sedona.jpg" alt="Информационный сайт для туристов Sedona" width="360" height="576">
