добавил атрибут value в iput type="checkbox"

--- a/catalog.html
+++ b/catalog.html
@@ -57,19 +57,19 @@
           <legend class="filter-title">Особености:</legend>
           <ul>
             <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" checked id="slide">
+              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" value="slider-feature" checked id="slide">
               <label class="label-checkbox" for="slide">Слайдер</label>
             </li>
             <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="feature-block" id="feature">
+              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="feature-block" value="advantages" id="feature">
               <label class="label-checkbox" for="feature">Блок преимуществ</label>
             </li>
             <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" checked id="fresh-info">
+              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" value="tidings"checked id="fresh-info">
               <label class="label-checkbox" for="fresh-info">Новости</label>
             </li>
             <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="galary" id="picture">
+              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="galary" value="pictures" id="picture">
               <label class="label-checkbox" for="picture">Галерея</label>
             </li>
             <li class="filter-option filter-option-basket">
