присвоил стили в случае невалидных данных (работают не совсем так, как ожидал) + сделал состояние disabled в фильтре

--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
               <ul>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="adaptive" id="variable" checked disabled>
-              <label class="label-radio label-radio-checked" for="variable">Адаптивная</label>
+              <label class="label-radio" for="variable">Адаптивная</label>
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="static" id="fixed">
