--- a/catalog.html
+++ b/catalog.html
@@ -161,9 +161,9 @@
     <section class="popup">
       <h2 class="popup-title">Напишите нам</h2>
       <form class="popup-form" action="https://echo.htmlacademy" method="post">
-        <label class="name">Ваше имя:<input type="text" name="fullname" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии" required></label>
-        <label class="mail">Ваш e-mail:<input type="text" name="e-mail" placeholder="email@example.com" aria-label="Поле для email"required ></label>
-        <label class="letter">Текст письма:<textarea name="letter" placeholder="В свободной форме" aria-label="Поле для обращения" required></textarea></label>
+        <label class="name">Ваше имя:<input class="invalid" type="text" name="fullname" required placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
+        <label class="mail">Ваш e-mail:<input type="text" name="e-mail" required placeholder="email@example.com" aria-label="Поле для email"></label>
+        <label class="letter">Текст письма:<textarea name="letter" required placeholder="В свободной форме" aria-label="Поле для обращения"></textarea></label>
         <button class="modal-button button" type="submit">Отправить</button>
       </form>
       <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
