--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
            <legend class="filter-title">Сетка:</legend>
               <ul>
             <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="adaptive" id="variable" checked disabled>
+              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="adaptive" id="variable" checked>
               <label class="label-radio" for="variable">Адаптивная</label>
             </li>
             <li class="filter-option">
