добавил размеры к тегам img лого партнеров

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
       <section class="partners">
         <h2 class="visually-hidden">Наши партнеры</h2>
         <ul class="partners-list">
-          <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html_copy.png" alt="HTML Academy"></a></li>
-          <li><a href="#"><img src="img/partners/logo-barber_copy.png" alt="Barbershop Borodiski"></a></li>
-          <li><a href="#"><img src="img/partners/logo-pinc_copy.png" alt="Pink"></a></li>
-          <li><a href="#"><img src="img/partners/logo-mishka_copy.png" alt="Mishka"></a></li>
+          <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html_copy.png" width="199" height="68" alt="HTML Academy"></a></li>
+          <li><a href="#"><img src="img/partners/logo-barber_copy.png" width="209" height="87" alt="Barbershop Borodiski"></a></li>
+          <li><a href="#"><img src="img/partners/logo-pinc_copy.png" width="185" height="52" alt="Pink"></a></li>
+          <li><a href="#"><img src="img/partners/logo-mishka_copy.png" width="173" height="84" alt="Mishka"></a></li>
         </ul>
       </section>
     </div>
