добавил адрес в ссылку, отвечающую за открытие формы

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <p class="contact-name">Nёrds design studio</p>
           <p class="contact-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p class="contact-phone"><a href="tel:+78172757575">тел. +7 (817) 275-75-75</a></p>
-          <a class="button button-connect" href="#">Напишите нам</a>
+          <a class="button button-connect" href="form.html">Напишите нам</a>
         </div>
       </div>
     </section>
