--- a/catalog.html
+++ b/catalog.html
@@ -96,8 +96,27 @@
             </fieldset>
             <button class="button filter-button" type="submit">Показать</button>
           </form>
-          <!-- Здесь будет форма -->
         </section>
+
+        <section class="filter-sort">
+          <p class="sort-title">Сортировать</p>
+<ul class="sorting-list">
+  <li class="sorting-item">
+    <a сlass="active-sort-item" href="#">По цене</a>
+  </li>
+  <li>
+    <a href="#">По типу</a>
+  </li>
+  <li>
+    <a href="#">По названию</a>
+  </li>
+</ul>
+<p class="sorting-buttons">
+<button class="sort-down" type="button"></button>
+<button class="sort-up" type="button"></button>
+</p>
+  </section>
+
         <section class="catalog">
           <h2 class="visually-hidden">Образцы проектов</h2>
           <ul class="catalog-list">
