--- a/catalog.html
+++ b/catalog.html
@@ -99,26 +99,33 @@
           </form>
         </section>
 
-      <section class="filter-sort">
-          <p class="sort-title">Сортировать</p>
-          <ul class="sorting-list">
-            <li class="sorting-item">
-              <a сlass="active-sort-item" href="#">По цене</a>
-            </li>
-            <li>
-              <a href="#">По типу</a>
-            </li>
-            <li>
-              <a href="#">По названию</a>
-            </li>
-          </ul>
-          <p class="sorting-buttons">
-            <button class="sort-down" type="button"></button>
-            <button class="sort-up" type="button"></button>
-          </p>
-        </section>
-
         <section class="catalog">
+
+          <section class="filter-sort">
+            <h2 class="visually-hidden">Сортировка товаров</h2>
+              <p class="sort-title">Сортировать</p>
+              <ul class="sorting-type">
+                <li>
+                  <a сlass="active-sort-item" href="nerds.ru/filter-sort/price">По цене</a>
+                </li>
+                <li>
+                  <a href="#">По типу</a>
+                </li>
+                <li>
+                  <a href="#">По названию</a>
+                </li>
+              </ul>
+              <ul class="sorting-direction">
+              <li><a href="#"><span class="visually-hidden">Сортировка по убыванию</span></a></li>
+              <li><a href="#"><span class="visually-hidden">Сортировка по возрастанию</span></a></li>
+            </ul>
+
+              <!-- <p class="sorting-buttons">
+                <button class="sort-down" type="button"></button>
+                <button class="sort-up" type="button"></button>
+              </p> -->
+            </section>
+
           <h2 class="visually-hidden">Образцы проектов</h2>
           <ul class="catalog-list">
             <li class="catalog-item">
