спозиционировал и стилизовал элементы сортировки (кроме "кнопок")

--- a/catalog.html
+++ b/catalog.html
@@ -116,8 +116,8 @@
                 </li>
               </ul>
               <ul class="sorting-direction">
-              <li><a href="#"><span class="visually-hidden">Сортировка по убыванию</span></a></li>
-              <li><a href="#"><span class="visually-hidden">Сортировка по возрастанию</span></a></li>
+              <li><a class="down" href="#"><span class="visually-hidden">Сортировка по убыванию</span></a></li>
+              <li><a class="up" href="#"><span class="visually-hidden">Сортировка по возрастанию</span></a></li>
             </ul>
 
               <!-- <p class="sorting-buttons">
