--- a/catalog.html
+++ b/catalog.html
@@ -103,19 +103,19 @@
 
           <section class="filter-sort">
             <h2 class="visually-hidden">Сортировка товаров</h2>
-              <p class="sort-title">Сортировать</p>
-              <ul class="sorting-type">
-                <li>
-                  <a сlass="active-sort-item" href="nerds.ru/filter-sort/price">По цене</a>
-                </li>
-                <li>
-                  <a href="#">По типу</a>
-                </li>
-                <li>
-                  <a href="#">По названию</a>
-                </li>
-              </ul>
-              <ul class="sorting-direction">
+            <p class="sort-title">Сортировать</p>
+            <ul class="sorting-type">
+              <li>
+                <a сlass="sort-item" href="nerds.ru/filter-sort/price">По цене</a>
+              </li>
+              <li>
+                <a сlass="sort-item" href="#">По типу</a>
+              </li>
+              <li>
+                <a сlass="sort-item" href="#">По названию</a>
+              </li>
+            </ul>
+            <ul class="sorting-direction">
               <li><a class="down" href="#"><span class="visually-hidden">Сортировка по убыванию</span></a></li>
               <li><a class="up" href="#"><span class="visually-hidden">Сортировка по возрастанию</span></a></li>
             </ul>
