прописал адреса ссылкам пунктов блока сортировки карточек

--- a/catalog.html
+++ b/catalog.html
@@ -109,17 +109,16 @@
                 <a сlass="sort-item" href="nerds.ru/filter-sort/price">По цене</a>
               </li>
               <li>
-                <a сlass="sort-item" href="#">По типу</a>
+                <a сlass="sort-item" href="nerds.ru/filter-sort/type">По типу</a>
               </li>
               <li>
-                <a сlass="sort-item" href="#">По названию</a>
+                <a сlass="sort-item" href="nerds.ru/filter-sort/name">По названию</a>
               </li>
             </ul>
             <ul class="sorting-direction">
-              <li><a class="down" href="#"><span class="visually-hidden">Сортировка по убыванию</span></a></li>
-              <li><a class="up" href="#"><span class="visually-hidden">Сортировка по возрастанию</span></a></li>
+              <li><a class="down" href="nerds.ru"><span class="visually-hidden">Сортировка по убыванию</span></a></li>
+              <li><a class="up" href="nerds.ru"><span class="visually-hidden">Сортировка по возрастанию</span></a></li>
             </ul>
-
           </section>
 
           <h2 class="visually-hidden">Образцы проектов</h2>
