--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <section class="features">
       <div class="container-center">
         <div class="sliders-controls">
-          <a class="active" href="#"></a>
-          <a href="#"></a>
-          <a href="#"></a>
+          <a class="active-control control-1" href="#"></a>
+          <a class="control-2" href="#"></a>
+          <a class="control-3" href="#"></a>
         </div>
         <div class="features-slide features-slide-1">
           <p class="slide-slogan">Долго, дорого,<br> скрупулезно.</p>
