--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
     <section class="features">
       <div class="container-center">
         <div class="sliders-controls">
-          <a class="active-control control-1" href="#"></a>
+          <a class="active-control control-1" href="activ-slide.html"></a>
           <a class="control-2" href="#"></a>
           <a class="control-3" href="#"></a>
         </div>
         <div class="features-slide features-slide-1">
           <p class="slide-slogan">Долго, дорого,<br> скрупулезно.</p>
           <p class="slide-caption">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения</p>
-          <a class="button button-info" href="#">Узнать больше</a>
+          <a class="button button-info" href="features-slide-1.html">Узнать больше</a>
         </div>
         <div class="features-slide features-slide-2">
           <p class="slide-slogan">Любим математику как никто другой</p>
           <p class="slide-caption">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-          <a class="button button-info" href="#">Узнать больше</a>
+          <a class="button button-info" href="features-slide-2.html">Узнать больше</a>
         </div>
         <div class="features-slide features-slide-3">
           <p class="slide-slogan">Только ночь,<br> только хардкор</p>
           <p class="slide-caption">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается</p>
-          <a class="button button-info" href="#">Узнать больше</a>
+          <a class="button button-info" href="features-slide-3.html">Узнать больше</a>
         </div>
       </div>
     </section>
