--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
           <li class="service-item">
             <img src="img/service-item/service-item-1.jpg" alt="Монитор с сайтом" width="300" height="146">
             <p class="service-item-title">Веб-сайты</p>
-            <p class="service-item-slogan">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <p class="service-item-slogan service-item-slogan-1">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a class="button order-button" href="order-project.html">Заказать</a>
           </li>
           <li class="service-item">
             <img src="img/service-item/service-item-2.jpg" alt="Смартфоны с приложением" width="300" height="146">
             <p class="service-item-title">Приложения</p>
-            <p class="service-item-slogan">Покорите топ-10 приложений в AppStore и Google Play</p>
+            <p class="service-item-slogan service-item-slogan-2">Покорите топ-10 приложений в AppStore и Google Play</p>
             <a class="button order-button order-button-color1" href="order-project.html">Заказать</a>
           </li>
           <li class="service-item">
             <img src="img/service-item/service-item-3.jpg" alt="Презентационная доска" width="300" height="146">
             <p class="service-item-title">Презентации</p>
-            <p class="service-item-slogan">Вы даже не подозреваете, насколько вы изумительны!</p>
+            <p class="service-item-slogan service-item-slogan-3">Вы даже не подозреваете, насколько вы изумительны!</p>
             <a class="button order-button order-button-color2" href="order-project.html">Заказать</a>
           </li>
         </ul>
