поправил расположение элементоов в principle-company и  ability-company
Текст и тут ползет

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="wrapper-about">
           <h3 class="visually-hidden">Наши возможности и достижения</h3>
           <div class="principle-company">
-            <p class="principle-title">Мы маленькая, но гордая дизайн-студия из Краснодара.</p>
+            <p class="principle-title">Мы &mdash; маленькая, но гордая дизайн-студия из Краснодара.</p>
             <p class="principle-explain">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
           </div>
           <div class="ability-company">
