привел в соответствии с макетом элементы блока партнеров

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
           <p class="progress-slogan">C 2004 года Любим точность во всем:</p>
           <table class="progress-table">
             <tr class="procent">
-              <td>146<span class="pocent-smb">%</span></td>
-              <td>100<span class="pocent-smb">%</span></td>
-              <td>50<span class="pocent-smb">%</span></td>
+              <td>146<span class="procent-smb">%</span></td>
+              <td>100<span class="procent-smb">%</span></td>
+              <td>50<span class="procent-smb">%</span></td>
             </tr>
             <tr class="value">
               <td>Уровень самоотдачи</td>
