откорректировал в соответствии с макетом полжение линии актвного пункта меню

--- a/catalog.html
+++ b/catalog.html
@@ -103,7 +103,7 @@
 
           <section class="filter-sort">
             <h2 class="visually-hidden">Сортировка товаров</h2>
-            <p class="sort-title">Сортировать</p>
+            <p class="sort-title">Сортировать:</p>
             <ul class="sorting-type">
               <li>
                 <a сlass="sort-item" href="nerds.ru/filter-sort/price">По цене</a>
