расположил фильтры и спозиционировал подвал (страница каталога)

--- a/catalog.html
+++ b/catalog.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="price-controls">
                   <label class="min-price">от <input name="min-price" type="text" value="0"></label>
-                  <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+                  <label class="max-price">до <input name="max-price" type="text" value="15 000"></label>
                 </div>
               </div>
             </fieldset>
@@ -70,8 +70,8 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset>
-              <legend class="filter-title">Особености:</legend>
+            <fieldset class="filter-features">
+              <legend class="filter-title">Особенности:</legend>
               <ul>
                 <li class="filter-option">
                   <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" value="slider-feature" checked id="slide">
