откорректировал положение блоков с описанием карточек

--- a/catalog.html
+++ b/catalog.html
@@ -125,50 +125,50 @@
           <ul class="catalog-list">
             <li class="catalog-item">
               <img src="img/catalog-item/img-sedona.jpg" alt="Информационный сайт для туристов Sedona" width="360" height="576">
-              <div class="description-catalog-item">
+              <div class="description-catalog-item description-sedona">
                 <h3 class="catalog-item-topic"><a href="#">Sedona</a></h3>
                 <p>Информационный сайт для туристов</p>
-                <a class="button button-price" href="order-project.html">9900 руб.</a>
+                <a class="button button-price" href="order-project.html">9 900 руб.</a>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/catalog-item/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App" width="360" height="576">
-              <div class="description-catalog-item pinc-card">
+              <div class="description-catalog-item description-pink">
                 <h3 class="catalog-item-topic"><a href="#">Pink App</a></h3>
                 <p>Продуктовый лендинг приложения для iOS и Android</p>
-                <a class="button button-price" href="order-project.html">9900 руб.</a>
+                <a class="button button-price" href="order-project.html">9 900 руб.</a>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/catalog-item/img-barbershop.jpg" alt="Сайт мужского салона красоты Barbershop" width="360" height="576">
-              <div class="description-catalog-item">
+              <div class="description-catalog-item description-barber">
                 <h3 class="catalog-item-topic"><a href="#">Barbershop</a></h3>
                 <p>Сайт салона красоты. Для мужчин, да.</p>
-                <a class="button button-price" href="order-project.html">9900 руб.</a>
+                <a class="button button-price" href="order-project.html">9 900 руб.</a>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/catalog-item/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек Mishka" width="360" height="576">
-              <div class="description-catalog-item">
+              <div class="description-catalog-item description-mishka">
                 <h3 class="catalog-item-topic"><a href="#">Mishka</a></h3>
                 <p>Интернет-магазин вязаных игрушек</p>
-                <a class="button button-price" href="order-project.html">9900 руб.</a>
+                <a class="button button-price" href="order-project.html">9 900 руб.</a>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/catalog-item/img-aplus.jpg" alt="Лендниг курсов повышения квалификации A Plus" width="360" height="576">
-              <div class="description-catalog-item">
+              <div class="description-catalog-item description-a">
                 <h3 class="catalog-item-topic"><a href="#">A Plus</a></h3>
                 <p>Лендниг курсов повышения квалификации</p>
-                <a class="button button-price" href="order-project.html">9900 руб.</a>
+                <a class="button button-price" href="order-project.html">9 900 руб.</a>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/catalog-item/img-kvast.jpg" alt="Cайт производителя крафтового кваса Кваст" width="360" height="576">
-              <div class="description-catalog-item">
+              <div class="description-catalog-item description-kvast">
                 <h3 class="catalog-item-topic"><a href="#">Кваст</a></h3>
                 <p>Промо-сайт производителя крафтового кваса</p>
-                <a class="button button-price" href="order-project.html">9900 руб.</a>
+                <a class="button button-price" href="order-project.html">9 900 руб.</a>
               </div>
             </li>
           </ul>
