--- a/index.html
+++ b/index.html
@@ -172,10 +172,19 @@
     </section>
   </footer>
   <script>
-    var link = document.querySelector(".button-connect");
-    link.addEventListener("click", function() {
-      console.log("Клик по ссылке вход");
-    });
+  var link = document.querySelector(".button-connect");
+  var popup = document.querySelector(".popup");
+  var close = document.querySelector(".modal-close");
+
+  link.addEventListener("click", function (evt) {
+    evt.preventDefault();
+    popup.classList.add("popup-show");
+  })
+
+    close.addEventListener("click", function(evt){
+      evt.preventDefault();
+        popup.classList.remove("popup-show");
+    })
   </script>
 </body>
 
