--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
   <footer class="main-footer">
     <section class="location">
       <h2 class="visually-hidden">Адрес и контакты</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002735!2d30.320858715590237!3d59.938719169054785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1561055835314!5m2!1sru!2sru"></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002735!2d30.320858715590237!3d59.938719169054785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1561055835314!5m2!1sru!2sru"></iframe>
       <div class="contacts container-center">
         <div class="wrapper-contacts">
           <p class="contact-name">Nёrds design studio</p>
@@ -172,24 +173,32 @@
     </section>
   </footer>
   <script>
+    var link = document.querySelector(".button-connect");
+    var popup = document.querySelector(".popup");
+    var close = document.querySelector(".modal-close");
+    var form = popup.querySelector(".popup-form");
+    var username = popup.querySelector(".name");
+    var usermail = popup.querySelector(".mail");
+    var message = popup.querySelector(".letter");
 
-  var link = document.querySelector(".button-connect");
-  var popup = document.querySelector(".popup");
-  var close = document.querySelector(".modal-close");
-  var username = popup.querySelector("[name=fullname]");
 
-
-  link.addEventListener("click", function (evt) {
-    evt.preventDefault();
-    popup.classList.add("popup-show");
-    username.focus();
-  });
+    link.addEventListener("click", function(evt) {
+      evt.preventDefault();
+      popup.classList.add("popup-show");
+      username.focus();
+    });
 
     close.addEventListener("click", function(evt) {
       evt.preventDefault();
-        popup.classList.remove("popup-show");
+      popup.classList.remove("popup-show");
     });
 
+
+    form.addEventListener("submit", function(evt) {
+      if (!username.value || !usermail.value || !message.value)
+        evt.preventDefault();
+      console.log("Введите текст");
+    });
   </script>
 </body>
 
